# pareto2d

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.py
examples/: Makefile  README.py
src/pareto2d/: __init__.py  core.py  nb_pareto2d_demo.py
